# financial-dashboard

./: .env.example  .flake8  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 850b6dc1f31c_create_exchange_rates_stock_prices_.py
app/: main.py
app/api/: endpoints.py
app/core/: config.py
app/db/: session.py
app/models/: financial_models.py
app/services/: cbr_service.py  moex_service.py
tests/: test_cbr.py  test_moex.py
