[project]
name = "financial-dashboard"
version = "0.1.0"
description = "Real-time financial data dashboard"
authors = [
    {name = "Geller Roman Grigorevich",email = "roma.geller@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.poetry]
name = "financial-dashboard"
version = "0.1.0"
description = "Real-time financial data dashboard"
authors = ["Geller Roman Grigorevich <roma.geller@mail.ru>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.2"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
aiohttp = "^3.13.2"
pydantic = "^2.12.4"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pylint = "^4.0.3"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
    "E501"
]